--- a/app/Public/survey.html
+++ b/app/Public/survey.html
@@ -1,7 +1,28 @@
 <!--DOCTYPE html-->
 <html>
 <head>
+  <title>Fri3ndFind3r Beta</title>
+
+	<!-- Link to the jQuery Lib -->
+  	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
+  	<!-- Including Font Awesome Icons -->
+  	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
+
+	<!-- Link to reset/css stylesheet -->
+	<link rel="stylesheet" href="css/reset.css">
+<link rel="stylesheet" href="css/style.css">
+	<!--Import Google Icon Font-->
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
+
+	<!-- Compiled and minified Materialize CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
+
+	<!-- Compiled and minified Materialize JavaScript -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+          
+	
 </head>
 <link rel>
 <body></body>
-<script></script>
+</html>
