--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -23,6 +23,18 @@
           
 	
 </head>
-<link rel>
+<header>
+	<nav>
+		<div class="navbar navbar-light" style="background-color: #e3f2fd;">
+				<i class="fa fa-address-book-o fa-5x" aria-hidden="true" id=logo-icon></i>
+				<a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
+				<ul class="right hide-on-med-and-down" id="head-nav-links">
+					<li><a href="/survey">Survey</a></li>
+					<li><a href="/api/friends">API Friends List</a></li>
+					<li><a href="https://github.com/Kevinmotanya/FriendFinder">GitHub R3po</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
 <body></body>
 </html>
