--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -23,7 +23,9 @@
           
 	
 </head>
+<body>
 <header>
+	
 	<nav>
 		<div class="navbar navbar-light" style="background-color: #e3f2fd;">
 				<i class="fa fa-address-book-o fa-5x" aria-hidden="true" id=logo-icon></i>
@@ -36,5 +38,23 @@
 			</div>
 		</nav>
 	</header>
-<body></body>
+	<!-- the main content of the home page -->
+	<div class="container">
+		<div class="row">
+		<div class="col s12 z-depth-5 mainpanel">
+		<div id="mainpanel-content">
+				<h1>Friend Finder</h1>
+					<div class="divider"></div>
+					<h2>Answer a few basic questions.</h2>
+					<h2>Find the friend with the greatest compatibility!</h2>
+					<a href="/survey">
+				<button class="btn waves-effect waves-light" type="submit" name="action">Go to Survey
+					<i class="material-icons right">send</i>
+					</button>
+					</a>
+				</div>
+			</div>
+		</div>
+	</div>
+</body>
 </html>
