--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Friend Finder beta</title>
+	<title>Friend Finder Beta</title>
 
 	<!-- Link to the jQuery Library -->
-  	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-  	<!-- Including Font Awesome Icons -->
-  	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
+	<!-- Including Font Awesome Icons -->
+	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
 
 	<!-- Link to reset stylesheet -->
 	<link rel="stylesheet" href="css/reset.css">
 
 	<!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 	<!-- Compiled and minified Materialize CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
 	<!-- Compiled and minified Materialize JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-          
+
 	<link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -29,11 +30,11 @@
 		<nav>
 			<div class="nav-wrapper blue accent-2">
 				<i class="fa fa-address-book-o fa-5x" aria-hidden="true" id=logo-icon></i>
-				<a href="/" class="brand-logo" id="logo">Friend Finder</a>
+				<a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
 				<ul class="right hide-on-med-and-down" id="head-nav-links">
 					<li><a href="/survey">Survey</a></li>
 					<li><a href="/api/friends">API Friends List</a></li>
-					<li><a href="https://github.com/angrbrd/friend-finder">GitHub Repo</a></li>
+					<li><a href="https://github.com/Kevinmotanya/FriendFinder">GitHub Repo</a></li>
 				</ul>
 			</div>
 		</nav>
@@ -59,29 +60,30 @@
 		</div>
 	</main>
 
-	<footer class="page-footer blueviolet accent-2">
+	<footer class="page-footer blue accent-2">
 		<div class="container">
 			<div class="row">
 				<div class="col l6 s12">
-					<h5 class="white-text">Friend Finder App</h5>
-					<p class="grey-text text-lighten-4">Thank you for taking the brief survey. Your responses will be used for training purposes only :-].</p>
+					<h5 class="white-text">Fri3nd Find3r</h5>
+					<p class="grey-text text-lighten-4">Glad to get you a match. Have fun!!! :-].</p>
 				</div>
 				<div class="col l4 offset-l2 s12">
 					<h5 class="white-text">Links</h5>
 					<ul>
 						<li><a class="grey-text text-lighten-3" href="/api/friends">API Friends List</a></li>
-						<li><a class="grey-text text-lighten-3" href="https://github.com/kevinotanya/friend-finder">GitHub Repo</a></li>
+						<li><a class="grey-text text-lighten-3" href="https://github.com/Kevinmotanya/FriendFinder">GitHub Repo</a></li>
 					</ul>
 				</div>
 			</div>
 		</div>
 		<div class="footer-copyright">
 			<div class="container">
-				© 2017 people sites Kevin Motanya
-				<a class="grey-text text-lighten-4 right" href="https://github.com/kevinmotanya">Reference Work</a>
+				© 2017 social Kevin Motanya
+				<a class="grey-text text-lighten-4 right" href="https://github.com/Kevinmotanya">Projects</a>
 			</div>
 		</div>
 	</footer>
 
 </body>
+
 </html>
