--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -46,8 +46,8 @@
 		<div id="mainpanel-content">
 				<h1>Friend Finder</h1>
 					<div class="divider"></div>
-					<h2>Answer a few basic questions.</h2>
-					<h2>Find the friend with the greatest compatibility!</h2>
+					<h2>Take this survey and</h2>
+					<h2>We will find you someone awesome</h2>
 					<a href="/survey">
 				<button class="btn waves-effect waves-light" type="submit" name="action">Go to Survey
 					<i class="material-icons right">send</i>
