Feind this match

--- a/app/Public/survey.html
+++ b/app/Public/survey.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fri3ndFind3r Beta</title>
+  <title>Fri3ndFind3r B3ta</title>
 
 	<!-- Link to the jQuery Lib -->
   	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
