--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -44,13 +44,13 @@
 		<div class="row">
 		<div class="col s12 z-depth-5 mainpanel">
 		<div id="mainpanel-content">
-				<h1>Friend Finder</h1>
+				<h1>Fri3nd Find3r</h1>
 					<div class="divider"></div>
 					<h2>Take this survey and</h2>
 					<h2>We will find you someone awesome</h2>
 					<a href="/survey">
-				<button class="btn waves-effect waves-light" type="submit" name="action">Go to Survey
-					<i class="material-icons right">send</i>
+				<button class="btn waves-effect waves-light" type="submit" name="action">Hit the Survey
+					<i class="material-icons right">Go</i>
 					</button>
 					</a>
 				</div>
