--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -34,7 +34,7 @@
 
 		<nav>
 			<div class="navbar navbar-light" style="background-color: #e3f2fd;">
-				<i class="fa fa-meetup" aria-hidden="true" id=logo-icon></i>
+				<i class="fa fa-meetup" aria-hidden="true" id=logocon></i>
 				<a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
 				<ul class="right hide-on-med-and-down" id="head-nav-links">
 					<li><a href="./survey">Survey</a></li>
