--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -76,9 +76,7 @@
 
 					<!-- Content -->
 					<h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
-					<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil repudiandae
-						commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae harum esse fugiat.
-						Itaque, culpa?</p>
+					<p>Complete the survey and you will never go wrong</p>
 
 				</div>
 				<!-- Grid column -->
@@ -90,8 +88,7 @@
 
 					<!-- Content -->
 					<h5 class="text-uppercase font-weight-bold">Footer text 2</h5>
-					<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum commodi
-						aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id excepturi hic.</p>
+					<p>what do you think after the survey?.</p>
 
 				</div>
 				<!-- Grid column -->
