--- a/app/Public/survey.html
+++ b/app/Public/survey.html
@@ -1,28 +1,267 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Fri3ndFind3r B3ta</title>
+	<title>Fri3ndFind3r B3ta</title>
 
 	<!-- Link to the jQuery Lib -->
-  	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
-  	<!-- Including Font Awesome Icons -->
-  	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
+	<!-- Including Font Awesome Icons -->
+	<script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
 
 	<!-- Link to reset/css stylesheet -->
 	<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 	<!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
 
 	<!-- Compiled and minified Materialize CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
 
 	<!-- Compiled and minified Materialize JavaScript -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-          
-	
-</head>
-<link rel>
-<body></body>
+
+
+</head><body>
+<div class="col s12 m7">
+    <h2 class="header">Horizontal Card</h2>
+    <div class="card horizontal">
+      <div class="card-image">
+        <img src="https://lorempixel.com/100/190/nature/6">
+      </div>
+      <div class="card-stacked">
+        <div class="card-content">
+          <p>I am a very simple card. I am good at containing small bits of information.</p>
+        </div>
+        <div class="card-action">
+          <a href="https://github.com/Kevinmotanya/FriendFinder">Github Repo</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+	<div class="row">
+		<div class="col s12 z-depth-5 mainpanel">
+			<div id="mainpanel-content">
+				<h1>Survey Questions</h1>
+				<div class="divider"></div>
+
+				<h3>About You</h3>
+
+				<div class="input-field col s6">
+					<h5>Name (Required)</h5>
+					<i class="material-icons prefix">account_circle</i>
+					<input type="text" class="validate" placeholder="Your Name Here" id="userName">
+				</div>
+
+				<div class="input-field col s6">
+					<h5>Link to Photo Image (Required)</h5>
+					<i class="material-icons prefix">picture_in_picture</i>
+					<input type="text" class="validate" placeholder="Photo Link Here" id="userPhoto">
+				</div>
+
+				<!-- Survey Questions -->
+				<div class="input-field col s12">
+					<h3>Question 1</h3>
+					<h5>Your mind is always buzzing with unexplored ideas and plans.</h5>
+					<select id="question1">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 2</h3>
+					<h5>Generally speaking, you rely more on your experience than your imagination.</h5>
+					<select id="question2">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 3</h3>
+					<h5>You find it easy to stay relaxed and focused even when there is some pressure.</h5>
+					<select id="question3">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 4</h3>
+					<h5>You rarely do something just out of sheer curiosity.</h5>
+					<select id="question4">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 5</h3>
+					<h5>People can rarely upset you.</h5>
+					<select id="question5">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 6</h3>
+					<h5>It is often difficult for you to relate to other people’s feelings.</h5>
+					<select id="question6">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 7</h3>
+					<h5>In a discussion, truth should be more important than people’s sensitivities.</h5>
+					<select id="question7">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 8</h3>
+					<h5>You rarely get carried away by fantasies and ideas.</h5>
+					<select id="question8">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 9</h3>
+					<h5>You think that everyone’s views should be respected regardless of whether they are supported by facts or not.</h5>
+					<select id="question9">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<div class="input-field col s12">
+					<h3>Question 10</h3>
+					<h5>You feel more energetic after spending time with a group of people.</h5>
+					<select id="question10">
+						<option value="" disabled selected>Choose your option</option>
+						<option value="1">1 (Strongly Disagree)</option>
+						<option value="2">2</option>
+						<option value="3">3</option>
+						<option value="4">4</option>
+						<option value="5">5 (Strongly Agree)</option>
+					</select>
+				</div>
+
+				<!-- Survey Submit Button -->
+				<div>
+					<button class="btn waves-effect waves-light" type="submit" name="action" id="submitButton">Submit Responses
+						<i class="material-icons right">send</i>
+					</button>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<!-- Footer -->
+<footer class="page-footer font-small teal pt-4">
+
+	<!-- Footer Text -->
+	<div class="container-fluid text-center text-md-left">
+
+		<!-- Grid row -->
+		<div class="row">
+
+			<!-- Grid column -->
+			<div class="col-md-6 mt-md-0 mt-3">
+
+				<!-- Content -->
+				<h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
+				<p>Complete the survey and you will never go wrong</p>
+
+			</div>
+			<!-- Grid column -->
+
+			<hr class="clearfix w-100 d-md-none pb-3">
+
+			<!-- Grid column -->
+			<div class="col-md-6 mb-md-0 mb-3">
+
+				<!-- Content -->
+				<h5 class="text-uppercase font-weight-bold">Footer text 2</h5>
+				<p>what do you think after the survey?.</p>
+
+			</div>
+			<!-- Grid column -->
+
+		</div>
+		<!-- Grid row -->
+
+	</div>
+	<!-- Footer Text -->
+
+	<!-- Copyright -->
+	<div class="footer-copyright text-center py-3">© 2018 Copyright:
+		<a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+	</div>
+	<!-- Copyright -->
+
+</footer>
+<!-- Footer -->
+<!-- Modal Dialog Displaying Closest Friend Match -->
+<div id="modal1" class="modal">
+	<div class="modal-content">
+		<h4>Closest Friend Match</h4>
+		<div class="divider"></div>
+		<h5 id="userMatch"></h5>
+		<img id="userMatchImage" class="materialboxed" width="650" src="">
+	</div>
+	<div class="modal-footer">
+		<a href="/survey" class="modal-action modal-close waves-effect waves-green btn-flat">Fill Again!</a>
+	</div>
+</div>
+
+<script type="text/javascript"></script>
+</body>
+
 </html>
