--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 
 <head>
-    <title>Fri3ndFind3r Beta</title>
+    <title>Fri3ndFind3r B3ta</title>
+    <meta charset="UTF-8">
+    <!-- materialize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
 
-    <!-- Link to the jQuery Lib -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-
+    <!--Import Google Icon Font materialize icons-->
+    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Including Font Awesome Icons -->
     <script src="https://use.fontawesome.com/b38c8ed4c7.js"></script>
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Material Design Bootstrap -->
-    <link href="css/mdb.min.css" rel="stylesheet">
-
-    <!-- Link to reset/css stylesheet -->
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!--Import Google Icon Font-->
-    <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
-
-    <!-- Compiled and minified Materialize CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css">
-
-    <!-- Compiled and minified Materialize JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <!-- Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
 
 </head>
 
 <body>
-    <header>
-
-        <nav>
-            <div class="navbar navbar-light" style="background-color: teal">
-                <i class="fa fa-meetup" aria-hidden="true" id=logocon></i>
-                <a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
-                <ul class="right hide-on-med-and-down" id="head-nav-links">
-                    <li><a href="./survey">Survey</a></li>
-                    <li><a href="/api/friends">API Friends List</a></li>
-                    <li><a href="https://github.com/Kevinmotanya/FriendFinder">GitHub R3po</a></li>
-                </ul>
+    <nav>
+        <div class="navbar navbar-light" style="background-color:teal">
+            <i class="fa fa-meetup" aria-hidden="true" id=logocon></i>
+            <a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
+            <ul class="right hide-on-med-and-down" id="head-nav-links">
+                <li><a href="./survey">Survey</a></li>
+                <li><a href="/api/friends">API Friends List</a></li>
+                <li><a href="https://github.com/Kevinmotanya/FriendFinder">GitHub R3po</a></li>
+            </ul>
+        </div>
+    </nav>
+    <div class="col s12 m7">
+        <h2 class="header">Easy to Get Matched</h2>
+        <div class="card horizontal">
+            <div class="card-image">
+                <img src="assets/images.PNG">
             </div>
-        </nav>
-    </header>
+            <div class="card-stacked">
+                <div class="card-content">
+                    <p>You are very close to hitting your match</p>
+                </div>
+                <div class="card-action">
+                    <a href="https://kevinmotanya.github.io/Responsive-Portfolio/">Feedback</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- the main content of the home page -->
     <div class="container">
         <div class="row">
@@ -61,11 +68,25 @@
             </div>
         </div>
     </div>
-    <!-- Copyright -->
-    <!-- Footer -->
-    <footer class="page-footer font-small teal text- center pt-4">© 2019 Copyright
-        <br>
 
+    
+
+    </div>
+
+    <!-- Grabs information and sends it to server -->
+
+    <!-- Footer -->
+    <footer class="page-footer font-small teal text- center pt-4">© 2019 Copyright <br>
+
+        <!-- Content -->
+        <h5 class="text-uppercase font-weight-bold"></h5>
+        <p>Curious to get your match?</p>
+
+
+
+
+
+    </footer>
 </body>
 
 </html>
