--- a/app/Public/home.html
+++ b/app/Public/home.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <!-- materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-
     <!--Import Google Icon Font materialize icons-->
     <link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
@@ -37,7 +36,7 @@
         <h2 class="header">Easy to Get Matched</h2>
         <div class="card horizontal">
             <div class="card-image">
-                <img src="assets/images.PNG">
+                <img src="assets/image.JPG">
             </div>
             <div class="card-stacked">
                 <div class="card-content">
@@ -57,8 +56,8 @@
                 <div id="mainpanel-content">
                     <h1>Fri3nd Find3r</h1>
                     <div class="divider"></div>
-                    <h2>Easy to match in seconds</h2>
-                    <h2>Hit the Survey button and get close to your match</h2>
+                    <h3>Easy to match in seconds</h3>
+                    <h4>Hit the Survey button and get close to your match</h4>
                     <a href="/survey">
                         <button class="btn waves-effect waves-light" type="submit" name="action">Hit the Survey
                             <i class="material-icons right"></i>
