--- a/app/Public/survey.html
+++ b/app/Public/survey.html
@@ -6,8 +6,7 @@
         <title>Fri3ndFind3r B3ta</title>
     <meta charset="UTF-8">
     <!-- materialize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css">    
     <!--Import Google Icon Font materialize icons-->
 	<link href="https://fonts.googleapis.com/css?family=ZCOOL+KuaiLe" rel="stylesheet">
     <!--Let browser know website is optimized for mobile-->
@@ -44,16 +43,16 @@
                             <p>You are very close to hitting your match</p>
                         </div>
                         <div class="card-action">
-                            <a href="https://kevinmotanya.github.io/Responsive-Portfolio/">Website</a>
+                            <a href="https://kevinmotanya.github.io/Responsive-Portfolio/">Feedback</a>
                         </div>
                     </div>
                 </div>
             </div>
     <div class='container'>
             <div class="card panel col s12 z-depth-5 ">
-            <h1><strong>Survey Questions</strong></h1>
+            <h2><strong>Survey Questions</strong></h2>
             <div class='card-panel left-align white'>
-                <h5><strong>About You</strong></h5>
+                <h4><strong>About You</strong></h4>
                 <br>
                 <input id="name" type="text" class="validate" required>
                 <label class='active' for="name">Name (required)</label>
