--- a/app/Public/survey.html
+++ b/app/Public/survey.html
@@ -26,7 +26,7 @@
             <i class="fa fa-meetup" aria-hidden="true" id=logocon></i>
             <a href="/" class="brand-logo" id="logo">Fri3nd Find3r</a>
             <ul class="right hide-on-med-and-down" id="head-nav-links">
-                <li><a href="./survey">Survey</a></li>
+                <li><a href="/home">Home</a></li>
                 <li><a href="/api/friends">API Friends List</a></li>
                 <li><a href="https://github.com/Kevinmotanya/FriendFinder">GitHub R3po</a></li>
             </ul>
